# cadence

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  voice.py
backend/app/api/: chat.py  routes.py  schemas.py  streaming.py
backend/app/data/: _sqlalchemy_log_repository.py  json_repository.py  log_repository.py  postgres_log_repository.py  repository.py  sqlite_log_repository.py
backend/app/graph/: explanation.py  hub.py  response_assembly.py  routing.py  state.py
backend/app/models/: config.py  factory.py  registry.py
backend/app/observability/: __init__.py  logging.py  tracer.py
backend/eval/: cases.py  harness.py
backend/tests/: conftest.py  test_api_error_boundary.py  test_chat_endpoint.py  test_contracts.py  test_hub.py  test_hub_logger_wiring.py  test_logger_resolver.py  test_logger_subgraph.py  test_routing_eval.py  test_voice_layer.py
backend/tests/api/: test_explanation_stream.py  test_streaming_route_clarify.py
backend/tests/critical/: test_injury_hard_exclusion.py  test_logger_resolve_or_flag.py  test_model_swap_routing.py  test_output_gate.py  test_recovery_no_hallucination.py
backend/tests/graph/: test_hub_dispatch.py  test_logger_resolve_live_smoke.py  test_router_live_smoke.py  test_router_node.py  test_routing_decision.py  test_session_memory.py
backend/tests/integration/: test_bilateral_pairing.py  test_build_workout.py  test_explanation_reasons.py  test_generator_subgraph.py  test_injury_over_exclusion_recovery.py  test_observability_request.py
(+100 files in other folders)
